Revamp index.html for Cabernet Wine House
Updated the HTML structure and content for the Cabernet Wine House website, including improved navigation and form elements.

--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carbenet: wine house</title>
+    <title>Cabernet: Wine House</title>
     <link href="style.css" rel="stylesheet">
-   
 </head>
 <body>
     <header class="cabecalho">
-        <div>
         <img class="logo" src="My_project.png" alt="logo-wine">
-    </div>
-            <ul>
-                <a><li class="item">Quem somos?</li></a>
-                <a><li class="item">Reserva VIP</li></a>
-                <a><li class="item">Nossa Adega</li></a>
-                <a><li class="item">Contato</li></a>
+        <nav class="menu">
+            <ul class="menu-lista">
+                <a href="#"><li class="menu-item">Quem somos?</li></a>
+                <a href="#"><li class="menu-item">Reserva VIP</li></a>
+                <a href="#"><li class="menu-item">Nossa Adega</li></a>
+                <a href="#"><li class="menu-item">Contato</li></a>
             </ul>
-        </div>
+        </nav>
     </header>
 
     <main class="conteudo">
-            <div class="texto">
-        <h1 class="titulo">CABERNET WINE CATALOG</h1>
-        <h2 class="subtitulo">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. </h2>
-        <form>
-            <input type="text" name="reserve" placeholder="My wine..." size="20" maxlength="20">
-        </form>
-        <button class="boton">Search my wine!</button>
-    </div>
-        <div>
-            <h1></h1>
-        </div>
+        <section class="conteudo-principal">
+            <h1 class="titulo-principal">CABERNET WINE CATALOG</h1>
+            <p class="subtitulo">Discover our exclusive collection of fine wines. From bold reds to refreshing whites, find your perfect bottle.</p>
+            <form class="busca-vinho">
+                <input type="text" name="reserve" placeholder="Search for a wine (e.g., 'Merlot')..." size="20" maxlength="40">
+                <button class="botao-busca">Search Wine!</button>
+            </form>
+        </section>
+        <div class="imagem-placeholder">
+            </div>
     </main>
-<footer></footer>
+
+    <footer class="rodape">
+        <p>&copy; 2025 Cabernet Wine House. All rights reserved.</p>
+    </footer>
 </body>
 </html>
