--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cabernet: Wine House</title>
+    <title>Cabernet: Casa de Vinhos</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <img class="logo" src="My_project.png" alt="logo-wine">
         <nav class="menu">
             <ul class="menu-lista">
-                <a href="#"><li class="menu-item">Quem somos?</li></a>
+                <a href="#"><li class="menu-item">Quem somos</li></a>
                 <a href="#"><li class="menu-item">Reserva VIP</li></a>
                 <a href="#"><li class="menu-item">Nossa Adega</li></a>
                 <a href="#"><li class="menu-item">Contato</li></a>
@@ -22,19 +22,20 @@
 
     <main class="conteudo">
         <section class="conteudo-principal">
-            <h1 class="titulo-principal">CABERNET WINE CATALOG</h1>
-            <p class="subtitulo">Discover our exclusive collection of fine wines. From bold reds to refreshing whites, find your perfect bottle.</p>
+            <h1 class="titulo-principal">CATÁLOGO CABERNET</h1>
+            <p class="subtitulo">Descubra nossa coleção exclusiva de vinhos finos. Dos tintos encorpados aos brancos refrescantes, encontre sua garrafa perfeita.</p>
             <form class="busca-vinho">
-                <input type="text" name="reserve" placeholder="Search for a wine (e.g., 'Merlot')..." size="20" maxlength="40">
-                <button class="botao-busca">Search Wine!</button>
+                <input type="text" name="reserve" placeholder="Busque um vinho (ex.: 'Merlot')..." size="20" maxlength="40">
+                <button class="botao-busca">Buscar Vinho</button>
             </form>
         </section>
+
         <div class="imagem-placeholder">
-            </div>
+        </div>
     </main>
 
     <footer class="rodape">
-        <p>&copy; 2025 Cabernet Wine House. All rights reserved.</p>
+        <p>&copy; 2025 Developed by Fernanda Fátima da Silva - Cabernet Wine House. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
